--- a/run.yaml
+++ b/run.yaml
@@ -77,7 +77,7 @@
         force_apt_get: true
         package:
           - hdparm
-          - iperf
+          - iperf3
           - minicom
           - ncdu
           - nmap
