Added network basic config

--- a/run.yaml
+++ b/run.yaml
@@ -1,5 +1,12 @@
 ---
-- name: Create PVE cluster
+- name: Ensure correct networking on PVE hosts
+  hosts: pve_cluster
+  gather_facts: true
+  roles:
+    - name: network
+#TODO: add network interfaces
+
+- name: Ensure PVE cluster is created
   hosts: pve_cluster_starting_node
   gather_facts: false
   tasks:
@@ -8,13 +15,14 @@
       ansible.builtin.shell: pvecm status | grep -e "^Node ID"
       register: cluster_status
       ignore_errors: yes
-      changed_when: False
+      changed_when: false
+      failed_when: false
 
     - name: Create cluster
       command: "pvecm create {{ pve_cluster_name }}"
       when: "cluster_status.rc==1"
 
-- name: Join hosts to PVE cluster
+- name: Ensure all PVE hosts are in the cluster
   hosts: pve_cluster
   gather_facts: true
   tasks:
@@ -23,11 +31,12 @@
       shell: pvecm status | grep -e "^Node ID"
       register: cluster_status
       ignore_errors: yes
-      changed_when: False
+      changed_when: false
+      failed_when: false
 
     - name: Install pexpect
       ansible.builtin.apt:
-        cache_valid_time: 3600
+        update_cache: false
         install_recommends: false
         force_apt_get: true
         package: python3-pexpect
@@ -43,13 +52,14 @@
       failed_when: >
         ('abort!'                       in ret.stdout) or
         ('hostname verification failed' in ret.stdout) or
+        ('not found on local node'      in ret.stdout) or
         ("Can't connect to"             in ret.stdout) or
         (ret.rc != 0)
       changed_when: >
         ("successfully added node" in ret.stdout)
       when: "cluster_status.rc==1"
 
-- name: Configure PVE cluster hosts
+- name: Ensure proper configuration of PVE hosts
   hosts: pve_cluster
   gather_facts: true
   tasks:
@@ -81,10 +91,12 @@
           - minicom
           - ncdu
           - nmap
+          - parted
           - sed
           - sl
           - smartmontools
           - speedtest-cli
+          - stress
           - sysstat
           - tmux
           - tree
