--- a/roles/pve/tasks/apt.yaml
+++ b/roles/pve/tasks/apt.yaml
@@ -1,12 +1,4 @@
 ---
-- name: Update APT cache
-  ansible.builtin.apt:
-    cache_valid_time: 3600
-    force_apt_get: true
-    update_cache: true
-  failed_when: false
-  changed_when: false
-
 - name: Install Python APT module
   ansible.builtin.apt:
     install_recommends: false
@@ -78,3 +70,11 @@
         repo: deb http://download.proxmox.com/debian/pve {{ ansible_facts.distribution_release }} pve-no-subscription
         state: present
         update_cache: false
+
+- name: Ensure APT cache is updated
+  ansible.builtin.apt:
+    cache_valid_time: 3600
+    force_apt_get: true
+    update_cache: true
+  failed_when: false
+  changed_when: false
