--- a/roles/pve/tasks/hw.yaml
+++ b/roles/pve/tasks/hw.yaml
@@ -8,6 +8,7 @@
 
 - name: Install intel microcode
   ansible.builtin.apt:
+    update-cache: true
     cache_valid_time: 3600
     install_recommends: false
     force_apt_get: true
