misc: added unrar

--- a/run.yaml
+++ b/run.yaml
@@ -112,6 +112,7 @@
           - sysstat
           - tmux
           - tree
+          - unrar
           - unzip
           - wget
         state: present
