--- a/run.yaml
+++ b/run.yaml
@@ -104,6 +104,7 @@
           - ncdu
           - nmap
           - parted
+          - screen
           - sed
           - sl
           - smartmontools
